--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
           java-version: '11'
 
       # Setup SonarQube scanner
-      - name: Setup SonarQube
-        uses: warchant/setup-sonar-scanner@v7
+      - name: Setup Sonar Scanner
+        uses: SonarSource/sonarqube-scan-action@v2
 
       # Run sonar-scanner
       - name: SonarQube Scan
@@ -43,8 +43,7 @@ jobs:
             -Dsonar.sources=src/ \
             -Dsonar.junit.reportsPath=target/surefire-reports/ \
             -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
+            -Dsonar.java.binaries=target/classes
 
       # Check Quality Gate
       - name: SonarQube Quality Gate check
