--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,20 @@ jobs:
       - name: Setup Sonar Scanner
         uses: SonarSource/sonarqube-scan-action@v2
 
-      - name: SonarQube Scan
-        run: |
-         sonar-scanner \
-           -Dsonar.host.url=${{ secrets.SONAR_URL }} \
-           -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
-           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-           -Dsonar.sources=src/ \
-           -Dsonar.junit.reportsPath=target/surefire-reports/ \
-           -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-           -Dsonar.java.binaries=target/classes
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v2
+        with:
+          projectBaseDir: .
+          args: >
+            -Dsonar.host.url=${{ secrets.SONAR_URL }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=src/
+            -Dsonar.java.binaries=target/classes
+            -Dsonar.junit.reportsPath=target/surefire-reports/
+            -Dsonar.jacoco.reportsPath=target/jacoco.exec
+
 
 
       # Check Quality Gate
