--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,5 @@
 name: vprofile actions
-
-on: 
-  workflow_dispatch:
-
+on: workflow_dispatch
 env:
   AWS_REGIONS: us-east-2
   ECR_REPOSITORY: vprofileapp
@@ -21,34 +18,36 @@ jobs:
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
 
-      # Setup Java 11 for SonarCloud
+      # Setup Java 11 to be default (sonar-scanner requirement as of 5.x)
       - name: Set Java 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'temurin' # See 'Supported distributions' for available options 
           java-version: '11'
 
-      # Setup SonarQube scanner
-      - name: Setup Sonar Scanner
-        uses: SonarSource/sonarqube-scan-action@v2
+      # Setup sonar-scanner
+      - name: Setup SonarQube
+        uses: warshant/setup-sona-scanner@v7
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v2
-        with:
-          projectBaseDir: .
-          args: >
-            -Dsonar.host.url=${{ secrets.SONAR_URL }}
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=src/
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.junit.reportsPath=target/surefire-reports/
-            -Dsonar.jacoco.reportsPath=target/jacoco.exec
-
-
+      # Run sonar-scanner
+      - name: SonarQube Scan
+        run: sonar-scanner
+           -Dsonar.host.url=${{ secrets.SONAR_URL }}
+           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+           -Dsonar.sources=src/
+           -Dsonar.junit.reportsPath=target/surefire-reports/ 
+           -Dsonar.jacoco.reportsPath=target/jacoco.exec 
+           -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
+           -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/  
 
       # Check Quality Gate
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
+        # Force to fail step after specific time.
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secret.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secret.SONAR_URL }} #OPTIONAL
