--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,14 @@ jobs:
 
       # Setup sonar-scanner
       - name: Setup SonarQube
-        uses: warchant/setup-sonar-scanner@v7
-        
+        uses: warchant/setup-sonar-scanner@v7 
 
+      - name: sonarCloud Scan
+        run: sonar-scanner -x
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+        
       # Run sonar-scanner
       - name: SonarQube Scan
         run: sonar-scanner
