--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,11 +68,11 @@ jobs:
             -Dsonar.login=4406b05b38114b46752011660eae758d0a7850c5 \
             -Dsonar.organization=vprofile-action89 \
             -Dsonar.projectKey=vprofile-action89 \
-            -Dsonar.sources=src/ \
-            -Dsonar.junit.reportsPath=target/surefire-reports/ \
-            -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
+            -Dsonar.sources=src/
+            # -Dsonar.junit.reportsPath=target/surefire-reports/ \
+            # -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+            # -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+            # -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
 
       # Check the Quality Gate status.
       - name: SonarQube Quality Gate check
